Old zip file deletion, changed out deprecated URL method, removed warnings, changed function getPath() to getOrCreatePath()